# ZenohDezyneTranslator

./: .clangd  .gitignore  CMakeLists.txt  fixmes  notlar.
.cache/clangd/index/: Wrapper.cpp.4FF996A7EC903141.idx  Wrapper.h.A3DBC5C4A10118B0.idx  node1.cpp.234117FC78589F75.idx  node2.cpp.9EB51A4CE4A4FEA8.idx
examples/: AutoLights_run.sh  compile_time_parser_example.cpp  node1.cpp  node2.cpp
examples/AutomaticLightsExample/: AutoLights.cpp  Controller.cpp  FrontCamera.cpp  HighBeams.cpp  LightSensor.cpp  Timer.cpp
examples/old/vanilla-nodes/: node3.py
examples/vanilla-nodes/: adminspace-inspector.py  node1.py  node2.py
examples/wrapper-nodes/: node2.py
examples/wrapper-nodes/utils/: wrapper.py
parser/: parser  parser.cpp  parser.hpp  parser.y  scanner.cpp  scanner.l
src/: Bool.h  Enum.h  Expressions.h  Types.h  Wrapper.cpp  Wrapper.h  main.cpp  node1.cpp  node2.cpp
src/include/: Language.h  Preprocessing.h  Registries.h
src/old/: Bool.h  Wrapper.h  dezyne-codegen.py  main.cpp  node1.cpp
src/parser/: Statement.h  lexer.l  parser  parser.cpp  parser.hpp  parser.y  scanner.cpp  scanner.l
tests/: PreprocessingTests.cpp  RegistryTests.cpp  TypeTests.cpp
vanilla-nodes/: internals-inspector.py  node1.py
wrapper-nodes/: node1.py  wrapper-inspector.py
wrapper-nodes/utils/: wrapper.py
